# aetheragents

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
aetheragents/: __init__.py  base.py  factory.py
aetheragents/core/: agent.py  builder.py  processor.py
aetheragents/outputs/: __init__.py  base.py  function_call_output.py  json_output.py  text_output.py
aetheragents/processors/: __init__.py  openai.py
tests/processors/: test_openai.py
