[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetheragents"
version = "0.0.1"
description = "AetherAgents is an easy to use framework for creating AI agents"
authors = [
    { name = "Karsten Eckhardt", email = "karsten.eckhardt@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "openai",
]

[project.urls]
Homepage = "https://github.com/R4h4/aetheragents"
Repository = "https://github.com/R4h4/aetheragents.git"

[tool.hatch.build.targets.wheel]
packages = ["aetheragents"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.lint]
dependencies = [
  "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=aetheragents --cov=tests {args}"

[tool.hatch.envs.lint.scripts]
style = [
  "ruff check {args:.}",
  "ruff format --check {args:.}",
]